<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/layout_marginLeft"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:layout_marginRight="@dimen/layout_marginRight"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:layout_weight="1"
        android:foreground="?android:selectableItemBackground"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="3dp"
        app:contentPadding="4dp">

        <TextView
            android:id="@+id/guide_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:text="@string/mrz_scanner_guide"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/CardViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:layout_weight="5"
        android:elevation="8dp"
        android:foreground="?android:selectableItemBackground"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/cccd_mat_sau"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/img" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <Button
            android:id="@+id/scanBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:text="@string/scan_mrz" />

        <Button
            android:id="@+id/takePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:text="Chụp ảnh" />

        <Button
            android:id="@+id/qrCodeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:text="@string/scan_qr_code" />

        <Button
            android:id="@+id/inputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:text="Nhập bằng tay" />

        <Button
            android:id="@+id/inputCanNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:text="Nhập số CCCD" />
    </LinearLayout>
</LinearLayout>